--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -47,9 +47,9 @@ eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 farming-rpc = { path = "../pallets/farming/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
 vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
-beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop" }
-beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop" }
-substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop" }
+beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", optional = true }
+beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", optional = true }
+substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", optional = true }
 oracle-proxy-rpc = { path = "../pallets/oracle-proxy/rpc" }
 
 # Parachain dependencies
@@ -57,7 +57,7 @@ framenode-runtime = { path = "../runtime" }
 
 # Substrate dependencies
 
-evm-bridge-proxy-rpc = { path = "../pallets/trustless-bridge/evm-bridge-proxy/rpc" }
+evm-bridge-proxy-rpc = { path = "../pallets/trustless-bridge/evm-bridge-proxy/rpc", optional = true }
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 sp-arithmetic = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
@@ -103,9 +103,9 @@ prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https:
 beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 mmr-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 mmr-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
-leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop" }
+leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", optional = true }
 sc-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
-bridge-channel-rpc = { path = "../pallets/trustless-bridge/bridge-channel-rpc" }
+bridge-channel-rpc = { path = "../pallets/trustless-bridge/bridge-channel-rpc", optional = true }
 frame-remote-externalities = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 
 [build-dependencies]
@@ -133,6 +133,12 @@ private-net = [
 wip = [
     "framenode-chain-spec/wip",
     "framenode-runtime/wip",
+    "beefy-light-client",
+    "beefy-light-client-rpc",
+    "substrate-bridge-channel-rpc",
+    "evm-bridge-proxy-rpc",
+    "leaf-provider-rpc",
+    "bridge-channel-rpc",
 ]
 
 ready-to-test = [
