--- a/pallets/xst/benchmarking/Cargo.toml
+++ b/pallets/xst/benchmarking/Cargo.toml
@@ -13,13 +13,13 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3", default-features = false }
 currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies", default-features = false }
-frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false  }
-frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false  }
-frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false  }
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false  }
+frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false  }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false  }
 hex-literal = { version = "0.3.1" }
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false  }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false  }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false  }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false  }
+sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 common = { path = "../../../common", default-features = false  }
 permissions = { path = "../../permissions", default-features = false  }
 dex-manager = { path = "../../dex-manager", default-features = false  }
@@ -30,12 +30,12 @@ band = { path = "../../band", default-features = false  }
 oracle-proxy = {path = "../../oracle-proxy", default-features = false}
 xst = {path = "../../xst", default-features = false  }
 assets = { path = "../../assets", default-features = false }
+scale-info = { version = "2", default-features = false }
 
 [dev-dependencies]
-scale-info = { version = "2", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
 dex-api = { path = "../../dex-api", default-features = false }
 pool-xyk = { path = "../../pool-xyk", default-features = false }
@@ -49,6 +49,7 @@ common = { path = "../../../common", default-features = false, features = [
 [features]
 default = ["std"]
 std = [
+    'codec/std',
     "currencies/std",
     "frame-support/std",
     "frame-system/std",
@@ -65,4 +66,11 @@ std = [
     "band/std",
     "oracle-proxy/std",
     "xst/std",
+    "assets/std",
+    "scale-info/std",
+]
+
+runtime-benchmarks = [
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
 ]
