Order book skeleton (#388)
Signed-off-by: Mikhail Tagirov <dev.mikhail.tagirov@outlook.com>
Co-authored-by: bragov4ik <bragov4ik@hotmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -254,6 +254,7 @@ members = [
     "pallets/xst",
     "pallets/price-tools",
     "pallets/oracle-proxy",
+    "pallets/order-book",
     "pallets/trustless-bridge/ethereum-light-client",
     "pallets/trustless-bridge/bridge-inbound-channel",
     "pallets/trustless-bridge/bridge-outbound-channel",
