--- a/pallets/order-book/Cargo.toml
+++ b/pallets/order-book/Cargo.toml
@@ -32,6 +32,7 @@ sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkado
 sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 framenode-chain-spec = { path = "../../node/chain_spec", features = ["test"] }
 framenode-runtime = { path = "../../runtime", default-features = false, features = ["std"] }
+pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 
 [features]
 default = ["std"]
