--- a/pallets/xst/benchmarking/Cargo.toml
+++ b/pallets/xst/benchmarking/Cargo.toml
@@ -31,6 +31,8 @@ oracle-proxy = {path = "../../oracle-proxy", default-features = false}
 xst = {path = "../../xst", default-features = false  }
 assets = { path = "../../assets", default-features = false }
 scale-info = { version = "2", default-features = false }
+tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
+price-tools = { path = "../../price-tools", default-features = false  }
 
 [dev-dependencies]
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
@@ -68,6 +70,8 @@ std = [
     "xst/std",
     "assets/std",
     "scale-info/std",
+    "tokens/std",
+    "price-tools/std"
 ]
 
 runtime-benchmarks = [
