--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -28,23 +28,23 @@ serde = { features = [
 bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.38", package = "pallet-multisig", default-features = false }
 sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 sp-mmr-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
-pallet-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
-beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
-beefy-light-client-runtime-api = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
+pallet-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false, optional = true }
+beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false, optional = true }
+beefy-light-client-runtime-api = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false, optional = true }
 
-ethereum-light-client = { path = "../pallets/trustless-bridge/ethereum-light-client", default-features = false }
-dispatch = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
-bridge-inbound-channel = { path = "../pallets/trustless-bridge/bridge-inbound-channel", default-features = false }
-bridge-outbound-channel = { path = "../pallets/trustless-bridge/bridge-outbound-channel", default-features = false }
-eth-app = { path = "../pallets/trustless-bridge/eth-app", default-features = false }
-migration-app = { path = "../pallets/trustless-bridge/migration-app", default-features = false }
-erc20-app = { path = "../pallets/trustless-bridge/erc20-app", default-features = false }
-leaf-provider = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
-leaf-provider-runtime-api = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
-evm-bridge-proxy = { path = "../pallets/trustless-bridge/evm-bridge-proxy", default-features = false }
-evm-bridge-proxy-runtime-api = { path = "../pallets/trustless-bridge/evm-bridge-proxy/runtime-api", default-features = false }
-substrate-bridge-app = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
-substrate-bridge-channel = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
+ethereum-light-client = { path = "../pallets/trustless-bridge/ethereum-light-client", default-features = false, optional = true }
+dispatch = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false, optional = true }
+bridge-inbound-channel = { path = "../pallets/trustless-bridge/bridge-inbound-channel", default-features = false, optional = true }
+bridge-outbound-channel = { path = "../pallets/trustless-bridge/bridge-outbound-channel", default-features = false, optional = true }
+eth-app = { path = "../pallets/trustless-bridge/eth-app", default-features = false, optional = true }
+migration-app = { path = "../pallets/trustless-bridge/migration-app", default-features = false, optional = true }
+erc20-app = { path = "../pallets/trustless-bridge/erc20-app", default-features = false, optional = true }
+leaf-provider = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false, optional = true }
+leaf-provider-runtime-api = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false, optional = true }
+evm-bridge-proxy = { path = "../pallets/trustless-bridge/evm-bridge-proxy", default-features = false, optional = true }
+evm-bridge-proxy-runtime-api = { path = "../pallets/trustless-bridge/evm-bridge-proxy/runtime-api", default-features = false, optional = true }
+substrate-bridge-app = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false, optional = true }
+substrate-bridge-channel = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false, optional = true }
 
 assets = { path = "../pallets/assets", default-features = false }
 assets-runtime-api = { path = "../pallets/assets/runtime-api", default-features = false }
@@ -112,8 +112,8 @@ pallet-collective = { git = "https://github.com/sora-xor/substrate.git", branch 
 pallet-democracy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 pallet-elections-phragmen = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 pallet-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
-pallet-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
-pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
+pallet-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false, optional = true }
+pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false, optional = true }
 pallet-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 pallet-im-online = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 pallet-identity = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
@@ -157,7 +157,7 @@ currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-lib
 static_assertions = "1.1.0"
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
 traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
-bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false, optional = true }
 
 [dev-dependencies]
 env_logger = "0.9.0"
@@ -175,6 +175,8 @@ std = [
     "band/std",
     "bridge-multisig/std",
     "pallet-beefy/std",
+    "pallet-mmr/std",
+    "pallet-beefy-mmr/std",
     "sp-mmr-primitives/std",
     "sp-beefy/std",
     "beefy-light-client/std",
@@ -292,6 +294,25 @@ private-net = [
 wip = [
     "order-book/wip",
     "framenode-chain-spec/wip",
+    "pallet-mmr",
+    "beefy-light-client",
+    "beefy-light-client-runtime-api",
+    "ethereum-light-client",
+    "dispatch",
+    "bridge-inbound-channel",
+    "bridge-outbound-channel",
+    "eth-app",
+    "migration-app",
+    "erc20-app",
+    "leaf-provider",
+    "leaf-provider-runtime-api",
+    "evm-bridge-proxy",
+    "evm-bridge-proxy-runtime-api",
+    "substrate-bridge-app",
+    "substrate-bridge-channel",
+    "pallet-beefy",
+    "pallet-beefy-mmr",
+    "bridge-types"
 ]
 
 ready-to-test = [
