--- a/pallets/order-book/Cargo.toml
+++ b/pallets/order-book/Cargo.toml
@@ -27,6 +27,9 @@ trading-pair = { path = "../trading-pair", default-features = false }
 pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
 hex-literal = "0.3.1"
+serde = { version = "1.0", features = [
+    "derive",
+], optional = true, default-features = false }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
@@ -44,6 +47,7 @@ std = [
     "frame-system/std",
     "pallet-timestamp/std",
     "scale-info/std",
+    "serde",
     "sp-runtime/std",
     "sp-std/std",
     "technical/std",
