--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -48,6 +48,7 @@ env_logger = { version = "0.9.0", optional = true }
 
 [dev-dependencies]
 serde_json = "1.0.41"
+env_logger = { version = "0.9.0" }
 
 [features]
 default = ['std']
