--- a/pallets/order-book/Cargo.toml
+++ b/pallets/order-book/Cargo.toml
@@ -27,6 +27,7 @@ trading-pair = { path = "../trading-pair", default-features = false }
 pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
 hex-literal = "0.3.1"
+visibility = { version = "0.0.1", optional = true }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
@@ -34,7 +35,6 @@ sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-
 framenode-chain-spec = { path = "../../node/chain_spec", features = ["test"] }
 framenode-runtime = { path = "../../runtime", default-features = false, features = ["std"] }
 pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
-visibility = "0.0.1"
 
 [features]
 default = ["std"]
@@ -64,3 +64,5 @@ wip = [
     "framenode-chain-spec/wip",
     "framenode-runtime/wip",
 ]
+
+test = ["visibility"]
