--- a/pallets/ceres-liquidity-locker/benchmarking/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/benchmarking/Cargo.toml
@@ -75,3 +75,8 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
+
+wip = [
+    "common/wip",
+    "dex-api/wip",
+]
