added test case for pool with synthetics creation

--- a/pallets/pool-xyk/Cargo.toml
+++ b/pallets/pool-xyk/Cargo.toml
@@ -51,6 +51,7 @@ technical = { path = "../technical" }
 trading-pair = { path = "../trading-pair" }
 price-tools = { path = "../price-tools" }
 liquidity-proxy = { path = "../liquidity-proxy" }
+xst = { path = "../xst" }
 
 [features]
 default = ['std']
