--- a/Cargo.toml
+++ b/Cargo.toml
@@ -208,19 +208,19 @@ try-runtime-cli = { git = "https://github.com/sora-xor/substrate.git", branch = 
 
 pallet-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 
-# [patch."https://github.com/sora-xor/sora2-common.git"]
-# beefy-light-client = { path = "../sora2-common/pallets/beefy-light-client" }
-# beefy-light-client-rpc = { path = "../sora2-common/pallets/beefy-light-client/rpc" }
-# beefy-light-client-runtime-api = { path = "../sora2-common/pallets/beefy-light-client/runtime-api" }
-# leaf-provider = { path = "../sora2-common/pallets/leaf-provider" }
-# leaf-provider-rpc = { path = "../sora2-common/pallets/leaf-provider/rpc" }
-# leaf-provider-runtime-api = { path = "../sora2-common/pallets/leaf-provider/runtime-api" }
-# bridge-common = { path = "../sora2-common/pallets/bridge-common" }
-# dispatch = { path = "../sora2-common/pallets/dispatch" }
-# substrate-bridge-app = { path = "../sora2-common/pallets/substrate-app" }
-# substrate-bridge-channel = { path = "../sora2-common/pallets/substrate-channel" }
-# substrate-bridge-channel-rpc = { path = "../sora2-common/pallets/substrate-channel/rpc" }
-# bridge-types = { path = "../sora2-common/pallets/types" }
+[patch."https://github.com/sora-xor/sora2-common.git"]
+beefy-light-client = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+beefy-light-client-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+beefy-light-client-runtime-api = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+leaf-provider = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+leaf-provider-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+leaf-provider-runtime-api = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+bridge-common = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+dispatch = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+substrate-bridge-app = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+substrate-bridge-channel = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+bridge-types = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
 
 [workspace]
 members = [
