--- a/Cargo.toml
+++ b/Cargo.toml
@@ -209,18 +209,20 @@ try-runtime-cli = { git = "https://github.com/sora-xor/substrate.git", branch = 
 pallet-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 
 [patch."https://github.com/sora-xor/sora2-common.git"]
-beefy-light-client = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-beefy-light-client-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-beefy-light-client-runtime-api = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-leaf-provider = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-leaf-provider-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-leaf-provider-runtime-api = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-bridge-common = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-dispatch = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-substrate-bridge-app = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-substrate-bridge-channel = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
-bridge-types = { git = "https://github.com/sora-xor//sora2-common.git", tag = "0.0.1" }
+beefy-light-client = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+beefy-light-client-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+beefy-light-client-runtime-api = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+leaf-provider = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+leaf-provider-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+leaf-provider-runtime-api = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+bridge-common = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+dispatch = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+substrate-bridge-app = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+substrate-bridge-channel = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+bridge-types = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+bridge-data-signer = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
+multisig-verifier = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.0" }
 
 [workspace]
 members = [
