skip wasm build in rust-analyzer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
         "ready-to-test",
         "runtime-benchmarks",
         "try-runtime",
-    ]
+    ],
+    "rust-analyzer.cargo.extraEnv": {
+        "SKIP_WASM_BUILD": "1"
+    }
 }
