--- a/pallets/trustless-bridge/evm-bridge-proxy/rpc/Cargo.toml
+++ b/pallets/trustless-bridge/evm-bridge-proxy/rpc/Cargo.toml
@@ -23,4 +23,4 @@ sp-std = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot
 
 evm-bridge-proxy-runtime-api = { path = "../runtime-api" }
 common = { path = "../../../../common" }
-bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", rev = "3b1ae58977b1a163380ec021d4088525987a539b" }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common.git" }
