--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -133,6 +133,9 @@ private-net = [
 wip = [
     "framenode-chain-spec/wip",
     "framenode-runtime/wip",
+    "common/wip",
+    "dex-api-rpc/wip",
+    "liquidity-proxy-rpc/wip",
     "beefy-light-client",
     "beefy-light-client-rpc",
     "substrate-bridge-channel-rpc",
