--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -51,6 +51,7 @@ jsonrpc-core = { git = "https://github.com/sora-xor/jsonrpc.git", branch = "no-s
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
 permissions = { path = "../permissions", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
 
 [dev-dependencies]
 async-std = { version = "1.5", features = ["attributes", "unstable"] }
@@ -95,6 +96,7 @@ std = [
     'pallet-scheduler/std',
     'pallet-timestamp/std',
     'common/std',
+    'bridge-types/std',
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
