--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -72,3 +72,5 @@ bridge-channel-rpc = { path = "../pallets/trustless-bridge/bridge-channel-rpc" }
 substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
 rand = "0.8.5"
 mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.5.2", default-features = false }
+metrics = "0.21.0"
+metrics-exporter-prometheus = "0.12.1"
