--- a/pallets/dex-api/Cargo.toml
+++ b/pallets/dex-api/Cargo.toml
@@ -70,6 +70,6 @@ try-runtime = [
     "frame-support/try-runtime",
 ]
 
-wip = [
-    "common/wip",
+ready-to-test = [
+    "common/ready-to-test",
 ]
