--- a/pallets/xst/benchmarking/Cargo.toml
+++ b/pallets/xst/benchmarking/Cargo.toml
@@ -79,7 +79,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
 ]
 
-wip = [
-    "common/wip",
-    "dex-api/wip",
+ready-to-test = [
+    "common/ready-to-test",
+    "dex-api/ready-to-test",
 ]
