--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -302,6 +302,9 @@ wip = [
     "framenode-chain-spec/wip",
     "common/wip",
     "dex-api/wip",
+    'liquidity-proxy/wip',
+    "liquidity-proxy-runtime-api/wip",
+    "liquidity-proxy-benchmarking/wip",
     "pallet-mmr",
     "beefy-light-client",
     "beefy-light-client-runtime-api",
