--- a/utils/remote-ext/Cargo.toml
+++ b/utils/remote-ext/Cargo.toml
@@ -41,3 +41,10 @@ liquidity-proxy = { path = "../../pallets/liquidity-proxy" }
 dex-manager = { path = "../../pallets/dex-manager" }
 xst = { path = "../../pallets/xst" }
 common = { path = "../../common" }
+
+[features]
+wip = [
+    "common/wip",
+    "liquidity-proxy/wip",
+    "framenode-runtime/wip",
+]
