Revert "OrderBook: ready-to-test (#560)"
This reverts commit ab53fac818f1d370d58991d2d7d1834226a01152.

--- a/pallets/liquidity-proxy/rpc/Cargo.toml
+++ b/pallets/liquidity-proxy/rpc/Cargo.toml
@@ -21,7 +21,7 @@ liquidity-proxy-runtime-api = { path = "../runtime-api" }
 common = { path = "../../../common" }
 
 [features]
-ready-to-test = [
-    "common/ready-to-test",
-    "liquidity-proxy-runtime-api/ready-to-test",
+wip = [
+    "common/wip",
+    "liquidity-proxy-runtime-api/wip",
 ]
