--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -134,14 +134,14 @@ private-net = [
 wip = [
     "framenode-chain-spec/wip",
     "framenode-runtime/wip",
+    "common/wip",
+    "dex-api-rpc/wip",
+    "liquidity-proxy-rpc/wip",
 ]
 
 ready-to-test = [
     "framenode-chain-spec/ready-to-test",
     "framenode-runtime/ready-to-test",
-    "common/ready-to-test",
-    "dex-api-rpc/ready-to-test",
-    "liquidity-proxy-rpc/ready-to-test",
     "beefy-light-client",
     "beefy-light-client-rpc",
     "substrate-bridge-channel-rpc",
