--- a/pallets/ceres-liquidity-locker/benchmarking/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/benchmarking/Cargo.toml
@@ -76,7 +76,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
 ]
 
-ready-to-test = [
-    "common/ready-to-test",
-    "dex-api/ready-to-test",
+wip = [
+    "common/wip",
+    "dex-api/wip",
 ]
