--- a/pallets/dex-api/rpc/Cargo.toml
+++ b/pallets/dex-api/rpc/Cargo.toml
@@ -21,7 +21,7 @@ common = { path = "../../../common" }
 dex-runtime-api = { path = "../runtime-api" }
 
 [features]
-ready-to-test = [
-    "common/ready-to-test",
-    "dex-runtime-api/ready-to-test",
+wip = [
+    "common/wip",
+    "dex-runtime-api/wip",
 ]
