--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -75,7 +75,7 @@ try-runtime = [
     "frame-support/try-runtime",
 ]
 
-ready-to-test = [
-    "common/ready-to-test",
-    "dex-api/ready-to-test",
+wip = [
+    "common/wip",
+    "dex-api/wip",
 ]
