--- a/pallets/liquidity-proxy/benchmarking/Cargo.toml
+++ b/pallets/liquidity-proxy/benchmarking/Cargo.toml
@@ -83,8 +83,8 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
 ]
 
-ready-to-test = [
-    "common/ready-to-test",
-    "dex-api/ready-to-test",
-    "liquidity-proxy/ready-to-test",
+wip = [
+    "common/wip",
+    "dex-api/wip",
+    "liquidity-proxy/wip",
 ]
