--- a/pallets/order-book/Cargo.toml
+++ b/pallets/order-book/Cargo.toml
@@ -64,8 +64,8 @@ runtime-benchmarks = [
 
 try-runtime = ["frame-support/try-runtime"]
 
-ready-to-test = [
-    "framenode-chain-spec/ready-to-test",
-    "framenode-runtime/ready-to-test",
-    "common/ready-to-test",
+wip = [
+    "framenode-chain-spec/wip",
+    "framenode-runtime/wip",
+    "common/wip",
 ]
