--- a/pallets/pool-xyk/benchmarking/Cargo.toml
+++ b/pallets/pool-xyk/benchmarking/Cargo.toml
@@ -65,7 +65,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
 ]
 
-ready-to-test = [
-    "common/ready-to-test",
-    "dex-api/ready-to-test",
+wip = [
+    "common/wip",
+    "dex-api/wip",
 ]
