--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -298,7 +298,13 @@ private-net = [
 ]
 
 wip = [
+    "order-book/wip",
     "framenode-chain-spec/wip",
+    "common/wip",
+    "dex-api/wip",
+    'liquidity-proxy/wip',
+    "liquidity-proxy-runtime-api/wip",
+    "liquidity-proxy-benchmarking/wip",
     "pallet-mmr",
     "beefy-light-client",
     "beefy-light-client-runtime-api",
@@ -324,12 +330,6 @@ wip = [
 
 ready-to-test = [
     "framenode-chain-spec/ready-to-test",
-    "common/ready-to-test",
-    "dex-api/ready-to-test",
-    'liquidity-proxy/ready-to-test',
-    "liquidity-proxy-runtime-api/ready-to-test",
-    "liquidity-proxy-benchmarking/ready-to-test",
-    "order-book/ready-to-test",
 ]
 
 runtime-benchmarks = [
