register pair if doesnt exist

--- a/pallets/qa-tools/Cargo.toml
+++ b/pallets/qa-tools/Cargo.toml
@@ -18,6 +18,7 @@ codec = { package = "parity-scale-codec", version = "3", default-features = fals
 common = { path = "../../common", default-features = false }
 order-book = { path = "../../pallets/order-book", default-features = false }
 scale-info = { version = "2", default-features = false, features = ["derive"] }
+trading-pair = { path = "../trading-pair", default-features = false }
 frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false, optional = true }
 frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
