fix calculcation of amount to mint

--- a/pallets/qa-tools/Cargo.toml
+++ b/pallets/qa-tools/Cargo.toml
@@ -42,6 +42,17 @@ std = [
 	"order-book/std",
 	"scale-info/std",
 ]
+ready-to-test = [
+    "framenode-chain-spec/ready-to-test",
+    "framenode-runtime/ready-to-test",
+    "common/ready-to-test",
+	"order-book/ready-to-test"
+]
+private-net = [
+    "framenode-chain-spec/private-net",
+    "framenode-runtime/private-net",
+]
+
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
 	"order-book/runtime-benchmarks",
